<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bond_crash</name>
  <version>0.0.1</version>
  <description>Demonstrates a crash within bondcpp</description>
  <maintainer email="t.s.noble@outlook.com">Tom Noble</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>bondcpp</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>bond</exec_depend>
  <exec_depend>rclcpp</exec_depend>

<export>
    <build_type>ament_cmake</build_type>
  </export>
</package>